--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             
             <!-- Buttons (Hero) -->
             <div class="flex flex-col sm:flex-row gap-5 justify-center w-full max-w-md mx-auto mb-16 px-4">
-                <a href="https://examble.com/app.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 hover:brightness-110 px-8 py-4 rounded-xl font-bold text-lg transition-all shadow-[0_0_20px_rgba(234,179,8,0.3)] flex items-center justify-center gap-3 w-full sm:w-auto">
+                <a href="https://github.com/its3li/Aniro--landingpage/releases/download/v1.0/aniro.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 hover:brightness-110 px-8 py-4 rounded-xl font-bold text-lg transition-all shadow-[0_0_20px_rgba(234,179,8,0.3)] flex items-center justify-center gap-3 w-full sm:w-auto">
                     <!-- شعار أندرويد الجديد -->
                     <img src="https://cdn.freebiesupply.com/logos/large/2x/android-logo-black-and-white.png" alt="Android" class="w-6 h-6 object-contain opacity-90">
                     تحميل التطبيق مباشرة (APK)
