--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>تطبيق أنيروا - رفيقك للعبادة</title>
     <meta name="description" content="أنيروا، تطبيق إسلامي شامل. دقة في المواقيت، خشوع في التلاوة، وسكينة في الأذكار.">
     
+    <!-- أيقونة الموقع (Favicon) -->
+    <link rel="icon" href="https://i.ibb.co/CKkvMBDg/Make-the-light-2k-202601310231-1.jpg">
+
     <!-- الخطوط: أميري للعناوين + تجوال للنصوص -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
