Integrate Vercel Analytics into index.html
Added Vercel Analytics script for tracking.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>تطبيق أنيروا - رفيقك للعبادة</title>
     <meta name="description" content="أنيروا، تطبيق إسلامي شامل. دقة في المواقيت، خشوع في التلاوة، وسكينة في الأذكار.">
     
+    <!-- Vercel Analytics -->
+    <script>
+      window.va = window.va || function () { (window.va.q = window.va.q || []).push(arguments); };
+    </script>
+    <script src="/_vercel/insights/script.js"></script>
+
     <!-- أيقونة الموقع (Favicon) -->
     <link rel="icon" href="https://i.ibb.co/CKkvMBDg/Make-the-light-2k-202601310231-1.jpg">
 
