--- a/index.html
+++ b/index.html
@@ -330,27 +330,7 @@
                         ندرك أن أغلب العبادات كقيام الليل وقراءة الورد اليومي تكون في أوقات السكون. لذا صممنا الوضع الليلي (Dark Mode) بعناية فائقة، لتقليل إجهاد العين وزيادة التركيز والخشوع.
                     </p>
                     
-                    <!-- استعادة البطاقات -->
-                    <div class="space-y-4">
-                        <div class="flex items-center gap-4 glass-card p-4 rounded-xl border border-gold-500/10">
-                            <div class="w-10 h-10 rounded-full bg-gold-500/10 flex items-center justify-center shrink-0">
-                                <i data-lucide="moon" class="w-5 h-5 text-gold-400"></i>
-                            </div>
-                            <div class="text-right">
-                                <h4 class="font-bold text-white text-base">الوضع الليلي التلقائي</h4>
-                                <p class="text-xs md:text-sm text-slate-500">يتغير مظهر التطبيق تلقائياً مع غروب الشمس.</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center gap-4 glass-card p-4 rounded-xl border border-gold-500/10">
-                            <div class="w-10 h-10 rounded-full bg-gold-500/10 flex items-center justify-center shrink-0">
-                                <i data-lucide="type" class="w-5 h-5 text-gold-400"></i>
-                            </div>
-                            <div class="text-right">
-                                <h4 class="font-bold text-white text-base">تحكم كامل في الخطوط</h4>
-                                <p class="text-xs md:text-sm text-slate-500">كبر حجم الخط، غير نوعه، واضبط التباين كما تحب.</p>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- تم حذف البطاقتين من هنا -->
                 </div>
 
                 <!-- Showcase Mockups (Interactive Swap) -->
