--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="flex items-center gap-4">
                     <!-- زر التحميل (Navbar) -->
                     <!-- تم تحديث الرابط هنا -->
-                    <a href=https://github.com/its3li/Aniro--landingpage/releases/download/v2.0/aniro-2.0.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 px-4 md:px-6 py-2 md:py-2.5 rounded-full font-bold transition-all transform hover:scale-105 hover:shadow-[0_0_20px_rgba(234,179,8,0.4)] flex items-center gap-2 border border-gold-300/20 text-xs md:text-sm">
+                    <a href="https://github.com/its3li/Aniro--landingpage/releases/download/v2.0/aniro-2.0.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 px-4 md:px-6 py-2 md:py-2.5 rounded-full font-bold transition-all transform hover:scale-105 hover:shadow-[0_0_20px_rgba(234,179,8,0.4)] flex items-center gap-2 border border-gold-300/20 text-xs md:text-sm">
                         <span>تحميل</span>
                         <span class="hidden md:inline">APK</span>
                         <img src="https://cdn.freebiesupply.com/logos/large/2x/android-logo-black-and-white.png" alt="Android" class="w-5 h-5 object-contain opacity-90">
