Update download link to v4.0

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="flex items-center gap-4">
-                    <a href="https://github.com/its3li/Aniro--landingpage/releases/download/v2.0/aniro-2.0.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 px-4 md:px-6 py-2 md:py-2.5 rounded-full font-bold transition-all transform hover:scale-105 hover:shadow-[0_0_20px_rgba(234,179,8,0.4)] flex items-center gap-2 border border-gold-300/20 text-xs md:text-sm">
+                    <a href="https://github.com/its3li/Aniro-V3/releases/download/v4.0/Aniro-v4.0.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 px-4 md:px-6 py-2 md:py-2.5 rounded-full font-bold transition-all transform hover:scale-105 hover:shadow-[0_0_20px_rgba(234,179,8,0.4)] flex items-center gap-2 border border-gold-300/20 text-xs md:text-sm">
                         <span>تحميل</span>
                         <span class="hidden md:inline">APK</span>
                         <img src="https://cdn.freebiesupply.com/logos/large/2x/android-logo-black-and-white.png" alt="Android" class="w-5 h-5 object-contain opacity-90">
@@ -208,7 +208,7 @@
             </p>
             
             <div class="flex flex-col sm:flex-row gap-5 justify-center w-full max-w-md mx-auto mb-16 px-4 animate-fade-in-up" style="animation-delay: 0.6s;">
-                <a href="https://github.com/its3li/Aniro--landingpage/releases/download/v2.0/aniro-2.0.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 hover:brightness-110 px-8 py-4 rounded-xl font-bold text-lg transition-all shadow-[0_0_20px_rgba(234,179,8,0.3)] flex items-center justify-center gap-3 w-full sm:w-auto">
+                <a href="https://github.com/its3li/Aniro-V3/releases/download/v4.0/Aniro-v4.0.apk" class="bg-gradient-to-r from-gold-400 to-gold-600 text-midnight-900 hover:brightness-110 px-8 py-4 rounded-xl font-bold text-lg transition-all shadow-[0_0_20px_rgba(234,179,8,0.3)] flex items-center justify-center gap-3 w-full sm:w-auto">
                     <img src="https://cdn.freebiesupply.com/logos/large/2x/android-logo-black-and-white.png" alt="Android" class="w-6 h-6 object-contain opacity-90">
                     تحميل التطبيق مباشرة (APK)
                 </a>
